# generative-art

./: .gitignore  Readme.md  mandelbrot.py  pyproject.toml  squares.py
