[tool.poetry]
name = "generative-art"
version = "0.1.0"
description = "Generative algorithms used to greate nice graphics"
authors = ["lukaszdygon <ldygon94@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
